# WCN_SIMD

./: .clangd  .gitignore  CMakeLists.txt  DOCUMENTATION_UPDATES_NEEDED.md  README.md  compile_commands.json  roadmap.md
cmake/: WCN_SIMDConfig.cmake.in
docs/: API_COVERAGE.md  ARM_NEON_SYNC_SUMMARY.md  BUILDING.md  BUILD_COMPARISON.md  CHANGELOG.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXTENDED_API_IMPLEMENTATION_GUIDE.md  IDE_SETUP.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  LOW_TO_HIGH_SIMD_EMULATION_ANALYSIS.md  PHASE1_COMPLETION_SUMMARY.md  PROJECT_AUDIT_REPORT.md  QUICKSTART.md  SIMD_INSTRUCTION_COVERAGE.md  WORK_SUMMARY.md
examples/: CMakeLists.txt  atomic_test.c  main.c
include/: WCN_SIMD.h
include/wcn_simd/: wcn_atomic.h  wcn_detect.h  wcn_types.h
include/wcn_simd/platform/arm/: wcn_arm_neon.h  wcn_arm_neon_atomic.h  wcn_arm_sve.h  wcn_arm_sve2.h  wcn_arm_sve2_atomic.h  wcn_arm_sve_atomic.h
include/wcn_simd/platform/loongarch/: wcn_loongarch_lasx.h  wcn_loongarch_lasx_atomic.h  wcn_loongarch_lsx.h  wcn_loongarch_lsx_atomic.h
include/wcn_simd/platform/mips/: wcn_mips_msa.h  wcn_mips_msa_atomic.h
include/wcn_simd/platform/powerpc/: wcn_powerpc_altivec.h  wcn_powerpc_altivec_atomic.h  wcn_powerpc_vsx.h  wcn_powerpc_vsx_atomic.h
include/wcn_simd/platform/riscv/: wcn_riscv_rvv.h  wcn_riscv_rvv_atomic.h
include/wcn_simd/platform/wasm/: wcn_wasm_simd128.h  wcn_wasm_simd128_atomic.h
include/wcn_simd/platform/x86/: wcn_x86_avx.h  wcn_x86_avx2.h  wcn_x86_avx2_atomic.h  wcn_x86_avx512f.h  wcn_x86_avx512f_atomic.h  wcn_x86_avx_atomic.h  wcn_x86_fma.h  wcn_x86_sse2.h  wcn_x86_sse2_atomic.h  wcn_x86_sse3.h  wcn_x86_sse3_atomic.h  wcn_x86_sse4_1.h  wcn_x86_sse4_1_atomic.h  wcn_x86_sse4_2.h  wcn_x86_sse4_2_atomic.h  wcn_x86_ssse3.h  wcn_x86_ssse3_atomic.h
script/: build.bat  build.sh  build_wasm.ps1  build_wasm.sh  verify_completeness.js
src/: wcn_atomic.c  wcn_simd.c  wcn_simd_wasm_exports.c
wasm/: README.md  WCN_SIMD.wasm  demo_node.mjs  package.json  pnpm-lock.yaml  tsconfig.json  wcn_simd.js
wasm/public/: WCN_SIMD.wasm  t.js
wasm/src/: main.ts  wcn_simd.base64.ts  wcn_simd.ts
